# System3_App

./: .env.example  .gitignore  README.md  start_worker.bat
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: config.py  crypto.py  main.py
apps/api/app/routers/: keys.py  searches.py
apps/web/: README.md  middleware.ts  package-lock.json  package.json
apps/worker/: Dockerfile  nixpacks.toml  pyproject.toml
apps/worker/system3_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/worker/tests/: test_pipelines.py
apps/worker/worker/: config.py  crypto.py  db.py  email_classify.py  keys.py  main.py  queue.py  suppression.py
apps/worker/worker/pipelines/: discover.py  find_decisionmaker.py  get_businesses.py  hunt_persons.py  instantly_search.py  personalize.py  poll_instantly.py
docs/: PROJEKTPLAN.md  TESTLAUF.md
supabase/migrations/: 0001_initial_schema.sql  0002_lock_down_function_grants.sql  0003_claim_job_function.sql  0004_enqueue_search_job_trigger.sql  0005_business_personalization.sql  0006_workspace_personalization_prompt.sql  0007_dashboard_stats_function.sql  0008_corporate_mode_and_phone.sql  0009_search_overview_function.sql  0010_abo_trash_blocklist.sql  0011_company_summary.sql  0012_ai_agent_config.sql  0013_neverbounce.sql  0014_create_website_leads_table.sql  0015_create_count_recent_website_leads_rpc.sql  0016_create_personalization_templates_table.sql  0017_multi_workspace_support.sql  0018_add_contact_outreach_status.sql  0019_instantly_integration.sql  0020_dashboard_stats_instantly_aggregates.sql  (+8 more)
(+90 files in other folders)
