[project]
name = "system3-worker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "supabase>=2.6",
  "httpx>=0.27",
  "openai>=1.40",
  "cryptography>=43.0",
  "pydantic-settings>=2.4",
  "trafilatura>=1.12",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0", "respx>=0.21"]

[tool.ruff]
line-length = 100
